UI - fixing css layout issue with auto scroll; UI - Form - New "period" control to display an initial and final date of a period; UI - Crud view - fixing bugs in counter; UI - Error log report - search key - replacing text area by a single line input control; UI - Unit - Case view - hidding presumptives if none available; UI - Form - New "value" property, to provide a direct value to the control (supports string format);

--- a/client/less/app.less
+++ b/client/less/app.less
@@ -563,9 +563,9 @@
 	}
 }
 
-.maxh250scroll {
+.autoscroll {
 	overflow-x: auto;
-    max-height: 250px;
+    height: auto;
     overflow-y: overlay;
 }
 
